<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riptide_rviz</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="knutson.39@buckeyemail.osu.edu">Brach Knutson</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>riptide_msgs2</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>launch_msgs</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>chameleon_tf_msgs</build_depend>
  <build_depend>zed_interfaces</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>riptide_meshes</build_depend>

  <depend>rviz_common</depend>
  <depend>rviz_ogre_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
